<resources>
    <string name="app_name">Places</string>
    <string name="title_activity_maps">Map</string>
    <string name="app_tag_line">Find places around you</string>

    <!-- Login and signup texts -->
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="new_to_places">New to places?</string>
    <string name="signup">Sign Up</string>
    <string name="my_profile">Profile</string>
    <string name="logout">Logout</string>

    <!-- User information titles -->
    <string name="email">Email</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="temporary_password">Temporary password</string>
    <string name="new_password">New password</string>
    <string name="passcode">Passcode</string>

    <!-- Error messages -->
    <string name="error">Error</string>
    <string name="error_response">THERE WAS AN ERROR</string>
    <string name="error_email_empty">Email must not be empty</string>
    <string name="error_email_invalid">Inavlid Email ID</string>
    <string name="error_duplicate_email">Duplicate Email ID</string>
    <string name="error_first_name_empty">First name must not be empty</string>
    <string name="error_last_name_empty">Second name must not be empty</string>
    <string name="error_phone_number_empty">Phone number must not be empty</string>
    <string name="error_phone_number_invalid">Invalid phonenumber</string>
    <string name="error_password_empty">Password must not be empty</string>
    <string name="error_confirm_pass_empty">Confirm password must not be empty</string>
    <string name="error_confirm_pass_wrong">Enter the same password as above</string>
    <string name="error_password_wrong">Wrong password</string>
    <string name="error_password_wrong_format">Password should start with character, should have a number, an upper case letter and a lower case letter</string>
    <string name="error_password_length_invalid">Password should be between 8 and 16 chars</string>
    <string name="error_user_not_exists">User is not registered with Places.</string>
    <string name="wrong_passcode">Wrong passcode</string>

    <!-- Button messages -->
    <string name="reset_password">Reset password</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="confirmation">OK</string>

    <!-- Onscreen messages -->
    <string name="success">Success</string>
    <string name="reset_password_dialog_message">Confirm reset password?</string>
    <string name="password_changed_dialog_message">New password has been sent to your Email</string>
    <string name="profile_updated_dialog_message">Your profile has been successfully updated</string>
    <string name="password_changed">Your password has been changed</string>

    <!-- Program related strings -->
    <string name="alphabets">ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="numbers">0123456789</string>
    <string name="services">hospital,bank,movie_theater,train_station,gym,gas_station,
        doctor,police,pharmacy,beauty_salon,local_government_office,spa,school,clothing_store,car_repair,parking</string>
    <string name="services_display_names">Hospital,Bank,Movie theatre,Train station,Gym,
        Gas station,Doctor,Police,Pharmacy,Beauty salon,Government Offices,Spa,School,Clothing stores,Car repair,Parking</string>

    <!-- URL strings -->
    <string name="google_api_base_url">https://maps.googleapis.com/maps/api/</string>
    <string name="nearby_search_url"><![CDATA[https://maps.googleapis.com/maps/api/place/nearbysearch/json?location=%1$s,%2$s&radius=%3$s&type=%4$s&key=AIzaSyBrM7H8vbqZeMJf9objjEHnCpCt0uWXpao]]></string>
    <string name="places_details_url"><![CDATA[https://maps.googleapis.com/maps/api/place/details/json?placeid=%1$s&key=AIzaSyBrM7H8vbqZeMJf9objjEHnCpCt0uWXpao]]></string>
    <string name="places_image_url"><![CDATA[https://maps.googleapis.com/maps/api/place/photo?photoreference=%1$s&key=AIzaSyBrM7H8vbqZeMJf9objjEHnCpCt0uWXpao]]></string>
    <string name="image_url"><![CDATA[https://maps.googleapis.com/maps/api/place/photo?maxwidth=400&photoreference=%1$s&key=AIzaSyBrM7H8vbqZeMJf9objjEHnCpCt0uWXpao]]></string>

    <string name="google_places_web_key">AIzaSyBrM7H8vbqZeMJf9objjEHnCpCt0uWXpao</string>

    <!-- Navigation drawer related strings-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_update_radius">Update radius</string>
    <string name="title_activity_user_home">UserHomeActivity</string>
    <string name="title_activity_userhome">UserhomeActivity</string>

    <string name="default_search_radius">5000</string>

    <!-- Places details strings-->
    <string name="open_now">Open now</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="details">Details</string>
    <string name="reviews">Reviews</string>
    <string name="working_time">Working time</string>
    <string name="not_available">Not available</string>
    <string name="phone_number_not_available">Phone number not available</string>
    <string name="website_not_available">Website is not available</string>
    <string name="weekday_info_not_available">Weekday information is not available</string>
    <string name="rating_not_available">Rating is not available</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_results_found">No results found!</string>
    <string name="no_reviews_yet">No reviews yet</string>

    <string name="title_activity_image_view">ImageViewActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="restaurant">restaurant</string>
    <string name="favorites_path">Favorites/%1$s</string>
    <string name="favorites">Favorites</string>

</resources>
