<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/backgroundColor"
    tools:context=".ui.activities.SplashActivity">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/toolbar_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">
        <include
            layout="@layout/layout_toolbar"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp"
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_height">
        </include>
    </android.support.design.widget.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar_holder">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="60dp"
            android:paddingBottom="20dp"
            android:orientation="vertical">
            <android.support.design.widget.TextInputLayout
                style="@style/textInputLayoutStyle"
                android:id="@+id/til_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/MyHintText"
                app:errorTextAppearance="@style/error_appearance">
                <android.support.v7.widget.AppCompatEditText
                    style="@style/MyEditText"
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/email"
                    android:inputType="textPersonName"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                style="@style/textInputLayoutStyle"
                android:id="@+id/til_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/til_email"
                app:hintTextAppearance="@style/MyHintText"
                app:errorTextAppearance="@style/error_appearance">
                <android.support.v7.widget.AppCompatEditText
                    style="@style/MyEditText"
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/password"
                    android:inputType="textPassword"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.v7.widget.AppCompatButton
                style="@style/buttonStyle"
                android:id="@+id/btn_login"
                android:background="@drawable/button_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_below="@id/til_password"
                android:layout_alignLeft="@id/til_password"
                android:layout_alignRight="@id/til_password"/>
            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_forgot_pw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textAllCaps="false"
                android:onClick="true"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="@dimen/layout_margin_top_button"
                android:layout_centerHorizontal="true"
                android:textSize="@dimen/edit_text_size"
                android:layout_below="@id/btn_login"/>
            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_signup_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_to_places"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="@dimen/layout_margin_top_button"
                android:layout_centerHorizontal="true"
                android:textSize="@dimen/edit_text_size"
                android:layout_below="@id/tv_forgot_pw"/>
            <android.support.v7.widget.AppCompatButton
                style="@style/buttonStyle"
                android:id="@+id/btn_signup"
                android:background="@drawable/button_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:layout_below="@id/tv_signup_title"
                android:layout_alignLeft="@id/til_password"
                android:layout_alignRight="@id/til_password"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
