<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_reset_password"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.aldrin.places.Activities.ResetPasswordActivity">
    <include
        layout="@layout/layout_toolbar"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height">
    </include>
    <TextView
        android:id="@+id/title_reset_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="@dimen/layout_margin_top_button"
        android:textSize="24sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/toolbar"/>
    <android.support.design.widget.TextInputLayout
        style="@style/textInputLayoutStyle"
        android:id="@+id/email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_reset_pw"
        app:hintTextAppearance="@style/MyHintText"
        app:errorTextAppearance="@style/error_appearance">
        <android.support.v7.widget.AppCompatEditText
            style="@style/MyEditText"
            android:id="@+id/email_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:hint="@string/email"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.v7.widget.AppCompatButton
        style="@style/buttonStyle"
        android:id="@+id/button_reset_pw"
        android:background="@drawable/button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_below="@id/email_layout"
        android:layout_alignLeft="@id/email_layout"
        android:layout_alignRight="@id/email_layout"/>
</RelativeLayout>
