<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_change_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context="com.example.aldrin.places.Activities.ChangePasswordActivity">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/toolbar_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <include
            layout="@layout/layout_toolbar"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp"
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_height">
        </include>

    </android.support.design.widget.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar_holder">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputLayout
                style="@style/textInputLayoutStyle"
                android:id="@+id/email_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/MyHintText"
                app:errorTextAppearance="@style/error_appearance">
                <android.support.v7.widget.AppCompatEditText
                    style="@style/MyEditText"
                    android:id="@+id/email_et"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                style="@style/textInputLayoutStyle"
                android:id="@+id/passcode_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/email_layout"
                app:hintTextAppearance="@style/MyHintText"
                app:errorTextAppearance="@style/error_appearance">
                <android.support.v7.widget.AppCompatEditText
                    style="@style/MyEditText"
                    android:id="@+id/passcode_et"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:hint="@string/passcode"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                style="@style/textInputLayoutStyle"
                android:id="@+id/password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/passcode_layout"
                app:hintTextAppearance="@style/MyHintText"
                app:errorTextAppearance="@style/error_appearance">
                <android.support.v7.widget.AppCompatEditText
                    style="@style/MyEditText"
                    android:id="@+id/password_et"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:hint="@string/new_password"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                style="@style/textInputLayoutStyle"
                android:id="@+id/confirm_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/password_layout"
                app:hintTextAppearance="@style/MyHintText"
                app:errorTextAppearance="@style/error_appearance">
                <android.support.v7.widget.AppCompatEditText
                    style="@style/MyEditText"
                    android:id="@+id/confirm_et"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:hint="@string/confirm_password"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.v7.widget.AppCompatButton
                style="@style/buttonStyle"
                android:id="@+id/button_submit"
                android:background="@drawable/button_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:layout_below="@id/confirm_layout"
                android:layout_alignLeft="@id/password_layout"
                android:layout_alignRight="@id/password_layout"/>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
