<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_signup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/backgroundColor"
    tools:context="com.example.aldrin.places.Activities.SignupActivity">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/toolbar_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <include
            layout="@layout/layout_toolbar"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp"
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_height">
        </include>

    </android.support.design.widget.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar_holder">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/title_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="@dimen/layout_margin_top_button"
                android:textSize="24sp"
                android:layout_centerHorizontal="true" />
            <android.support.design.widget.TextInputLayout
                style="@style/textInputLayoutStyle"
                android:id="@+id/first_name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/title_signup"
                app:hintTextAppearance="@style/MyHintText"
                app:errorTextAppearance="@style/error_appearance">
                <android.support.v7.widget.AppCompatEditText
                    style="@style/MyEditText"
                    android:id="@+id/first_name_et"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/firstname"
                    android:inputType="textPersonName"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                style="@style/textInputLayoutStyle"
                android:id="@+id/last_name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/first_name_layout"
                app:hintTextAppearance="@style/MyHintText"
                app:errorTextAppearance="@style/error_appearance">
                <android.support.v7.widget.AppCompatEditText
                    style="@style/MyEditText"
                    android:id="@+id/last_name_et"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/lastname"
                    android:inputType="textPersonName"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                style="@style/textInputLayoutStyle"
                android:id="@+id/email_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/last_name_layout"
                app:hintTextAppearance="@style/MyHintText"
                app:errorTextAppearance="@style/error_appearance">
                <android.support.v7.widget.AppCompatEditText
                    style="@style/MyEditText"
                    android:id="@+id/email_et"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                style="@style/textInputLayoutStyle"
                android:id="@+id/phone_number_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/email_layout"
                app:hintTextAppearance="@style/MyHintText"
                app:errorTextAppearance="@style/error_appearance">
                <android.support.v7.widget.AppCompatEditText
                    style="@style/MyEditText"
                    android:id="@+id/phone_number_et"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="phone"
                    android:hint="@string/phone_number"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                style="@style/textInputLayoutStyle"
                android:id="@+id/password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/phone_number_layout"
                app:hintTextAppearance="@style/MyHintText"
                app:errorTextAppearance="@style/error_appearance">
                <android.support.v7.widget.AppCompatEditText
                    style="@style/MyEditText"
                    android:id="@+id/password_et"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:hint="@string/password"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                style="@style/textInputLayoutStyle"
                android:id="@+id/confirm_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/password_layout"
                app:hintTextAppearance="@style/MyHintText"
                app:errorTextAppearance="@style/error_appearance">
                <android.support.v7.widget.AppCompatEditText
                    style="@style/MyEditText"
                    android:id="@+id/confirm_et"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:hint="@string/confirm_password"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.v7.widget.AppCompatButton
                style="@style/buttonStyle"
                android:id="@+id/button_signup"
                android:background="@drawable/button_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:layout_below="@id/confirm_layout"
                android:layout_alignLeft="@id/password_layout"
                android:layout_alignRight="@id/password_layout"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
