<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="com.example.aldrin.places.Fragments.ProfileFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="192dp"
                android:layout_height="192dp"
                android:layout_centerHorizontal="true"
                android:padding="10dp"
                android:cropToPadding="true"
                android:src="@mipmap/ic_launcher" />
            <android.support.design.widget.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                app:fabSize="normal"
                app:srcCompat="@drawable/ic_photo_camera_white_24dp"
                app:elevation="@dimen/elevation"
                android:layout_above="@+id/first_name_layout"
                android:layout_alignRight="@+id/profile_image"
                android:layout_alignEnd="@+id/profile_image"
                android:id="@+id/fab_change_image" />
            <android.support.design.widget.TextInputLayout
                style="@style/textInputLayoutStyle"
                android:id="@+id/first_name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_image"
                app:hintTextAppearance="@style/MyHintText"
                app:errorTextAppearance="@style/error_appearance">
                <android.support.v7.widget.AppCompatEditText
                    style="@style/MyEditText"
                    android:id="@+id/first_name_et"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/firstname"
                    android:inputType="textPersonName"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                style="@style/textInputLayoutStyle"
                android:id="@+id/last_name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/first_name_layout"
                app:hintTextAppearance="@style/MyHintText"
                app:errorTextAppearance="@style/error_appearance">
                <android.support.v7.widget.AppCompatEditText
                    style="@style/MyEditText"
                    android:id="@+id/last_name_et"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/lastname"
                    android:inputType="textPersonName"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                style="@style/textInputLayoutStyle"
                android:id="@+id/email_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/last_name_layout"
                android:clickable="false"
                app:hintTextAppearance="@style/MyHintText"
                app:errorTextAppearance="@style/error_appearance">
                <android.support.v7.widget.AppCompatEditText
                    style="@style/MyEditText"
                    android:id="@+id/email_et"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                style="@style/textInputLayoutStyle"
                android:id="@+id/phone_number_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/email_layout"
                app:hintTextAppearance="@style/MyHintText"
                app:errorTextAppearance="@style/error_appearance">
                <android.support.v7.widget.AppCompatEditText
                    style="@style/MyEditText"
                    android:id="@+id/phone_number_et"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="phone"
                    android:hint="@string/phone_number"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.v7.widget.AppCompatButton
                style="@style/buttonStyle"
                android:id="@+id/button_submit"
                android:background="@drawable/button_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:layout_below="@id/phone_number_layout"
                android:layout_alignLeft="@id/phone_number_layout"
                android:layout_alignRight="@id/phone_number_layout"/>
        </RelativeLayout>
    </ScrollView>
</LinearLayout>
